latin_america/brazil/camilo/config/xmpp_resident/room/ca2@livecoding.tv/xmpp_bot.cpp-compile-log.txt
In file included from /home/camilo/.ca2/appdata/system/config/xmpp_resident/room/ca2@livecoding.tv/xmpp_bot_common.cpp:26:0,
                 from /home/camilo/.ca2/appdata/system/config/xmpp_resident/room/ca2@livecoding.tv/xmpp_bot.cpp:99:
/home/camilo/.ca2/appdata/system/config/xmpp_resident/room/ca2@livecoding.tv/lib1.cpp: In member function ‘bool this_plugin::set_user_timer(string, string, string, string)’:
/home/camilo/.ca2/appdata/system/config/xmpp_resident/room/ca2@livecoding.tv/lib1.cpp:367:39: error: ‘strParam’ was not declared in this scope
    call_async("/xcore/stage/x86/app", strParam + " : dont_add_to_playlist", "/xcore/stage/x86", SW_SHOW, false);
                                       ^
